Feat: 사용자 붕어빵 도감 데이터 조회 응답값 추가
- iconCode, seq